2001-05-29  Alexandre Oliva  <aoliva@redhat.com>

	* symfile.c (compare_psymbols, compare_symbols): Declare using
	PTR, as in the definition.
	* minsyms.c (compare_minimal_symbols): Likewise.
	* coffread.c (find_targ_sec): Likewise.
	* elfread.c (free_elfinfo, elf_locate_sections): Likewise.
	* mipsread.c (alphacoff_locate_sections): Likewise.
	* mdebugread.c (compare_blocks): Likewise.

2001-05-25  Nick Duffek  <nsd@redhat.com>

	* solib.c (update_solib_list): Move target_resize_to_sections()
	into solib_map_sections() loop.
	(info_sharedlibrary_command): Try bfd_arch_bits_per_address() if
	bfd_get_arch_size() fails.

2001-05-25  Nick Duffek  <nsd@redhat.com>

	* Makefile.in (osfsolib.c, osfsolib.o): Rename to solib-osf.c and
	solib-osf.o.
	* config/alpha/alpha-osf1.mh (NATDEPFILES): Replace osfsolib.o
	with solib-osf.o and solib.o.
	* config/alpha/alpha-osf2.mh: Likewise.
	* config/alpha/alpha-osf3.mh: Likewise.
	* solib-osf.c: New file, renamed and largely rewritten from
	osfsolib.c.

2001-05-25  Michael Snyder  <msnyder@redhat.com>

	* lin-lwp.c (lin_lwp_attach_lwp): Call stop_wait_callback,
	to consume the SIGSTOP generated by PTRACE_ATTACH.
	(stop_wait_callback): If a SIGTRAP or a SIGINT event is consumed,
	try again to get the SIGSTOP event.
	(lin_lwp_wait): Resume all threads when ignoring a signal.
	This will insure that newly attached threads get resumed.
	* lin-lwp.c (stop_wait_callback): Discard redundant SIGINT events.
	* remote.c (remote_write_bytes): Update 'p' packet pointer.

2001-05-25  Jim Blandy  <jimb@redhat.com>

	* gnu-v2-abi.c (gnuv2_virtual_fn_field): There's no need to clear
	VALUE_POINTED_TO_OFFSET here; if value_cast doesn't return a
	useful value, then we should fix that instead.

2001-05-24  Nick Duffek  <nsd@redhat.com>

	* solist.h (struct so_list): Document the requirement that
	current_sos initialize some fields to 0.

2001-05-24  Mark Kettenis  <kettenis@gnu.org>

	* gnu-nat.c: Include <ctype.h>.